--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Flask-Migrate==3.1.0
 flask-restx==0.5.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3.post0
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
 iniconfig==1.1.1
@@ -30,6 +31,7 @@ Mako==1.2.3
 MarkupSafe==2.1.1
 packaging==21.3
 pluggy==1.0.0
+psycopg2==2.9.6
 py==1.11.0
 PyJWT==2.5.0
 pyparsing==3.0.9
